# design-patterns-python

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
factory_method/audit/: ILogger.py  Logger.py
factory_method/client/: FactoryMethodClient.py
factory_method/factory/: Board.py  ChessBoard.py  Logger.py  SolitaireBoard.py
factory_method/products/: ChessGame.py  Game.py  SolitaireGame.py
tests/: test_factory.py
